--- a/app/src/css/app.sass
+++ b/app/src/css/app.sass
@@ -1,20 +1,77 @@
 // app global css in Sass form
+// Headers
+@font-face { font-family: headerBlack; src: url(./fonts/Montserrat/Montserrat-Black.ttf); }
+.header-black { font-family: 'headerBlack'; }
+
+@font-face { font-family: headerBold; src: url(./fonts/Montserrat/Montserrat-Bold.ttf); }
+.header-bold { font-family: 'headerBold'; }
+
+@font-face { font-family: header; src: url(./fonts/Montserrat/Montserrat-Regular.ttf); }
+.header { font-family: 'header'; }
+
+// Body
+@font-face { font-family: bodyBold; src: url(./fonts/Montserrat/Montserrat-Bold.ttf); }
+.body-bold { font-family: 'bodyBold'; }
+
+@font-face { font-family: bodyItalic; src: url(./fonts/Montserrat/Montserrat-Italic.ttf); }
+.body-italic { font-family: 'bodyItalic'; }
+
+@font-face { font-family: body; src: url(./fonts/Montserrat/Montserrat-Regular.ttf); }
+.body, div, p { font-family: 'body'; }
+
+// Color classes
+.primary { color: $primary }
+.primaryreg { color: $primaryreg }
+.primarylight { color: $primarylight }
+.secondary { color: $secondary }
+.accent { color: $accent }
+
+.dark { color: $dark }
+.light { color: $light }
+.darkgrey { color: $darkgrey  }
+.lightgrey { color: $lightgrey }
+
+.positive { color: $positive }
+.negative { color: $negative }
+.info { color: $info }
+.warning { color: $warning }
+
+h1, h2, h3, h4, h5, h6 { margin-bottom: 0 }
+h4 { margin-top: 0 }
+
+
 .body--light,
   .dark-toggle
-    color $dark
+    color: $dark
 
   .hyperlink
-    color $primary
-    text-decoration underline
-    cursor pointer
-    display inline-block
+    color: $primary
+    text-decoration: underline
+    cursor: pointer
+    display: inline-block
 
 .body--dark
   .dark-toggle
-    color: $light !important
+    color: $light
 
   .hyperlink
-    color $dark
-    text-decoration underline
-    cursor pointer
-    display inline-block
+    color: $dark
+    text-decoration: underline
+    cursor: pointer
+    display: inline-block
+
+// Set max width for all content
+.all-content-format
+  max-width: 1023px
+  margin: 0 auto
+
+// Card formatting
+.card-border
+  border-width: 1px
+  border-style: solid
+  border-color: $lightgrey
+
+.card-border:hover
+  border-width: 1px
+  border-style: solid
+  border-color: $primary
