--- a/app/src/css/quasar.variables.sass
+++ b/app/src/css/quasar.variables.sass
@@ -12,12 +12,17 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #1976D2
+$primaryreg   : #FCBF29 // darkest orange used in logo
+$primarylight : #FEDB41
+
+$primary   : darken(#FCBF29, 15%)
 $secondary : #26A69A
 $accent    : #9C27B0
 
 $dark      : #1D1D1D
 $light     : #E2E2E2
+$darkgrey  : #767171
+$lightgrey : #D0CECE
 
 $positive  : #21BA45
 $negative  : #C10015
