Initial setup of send/receive pages

--- a/app/src/css/app.sass
+++ b/app/src/css/app.sass
@@ -39,6 +39,15 @@
 h1, h2, h3, h4, h5, h6 { margin-bottom: 0 }
 h4 { margin-top: 0 }
 
+.page-title
+  @extend .header-black
+  margin-top: 1rem
+  margin-bottom: 2rem
+  text-align: center
+
+.form
+  max-width: 500px
+  margin: 0 auto
 
 .body--light,
   .dark-toggle
