--- a/app/src/css/quasar.variables.sass
+++ b/app/src/css/quasar.variables.sass
@@ -14,8 +14,9 @@
 
 $primaryreg   : #FCBF29 // darkest orange used in logo
 $primarylight : #FEDB41
+$primarydark   : darken($primaryreg, 30%)
 
-$primary   : darken(#FCBF29, 15%)
+$primary   : darken($primaryreg, 15%)
 $secondary : #26A69A
 $accent    : #9C27B0
 
