--- a/app/src/css/app.sass
+++ b/app/src/css/app.sass
@@ -1,43 +1,77 @@
 // app global css in Sass form
 // Headers
-@font-face { font-family: headerBlack; src: url(./fonts/Montserrat/Montserrat-Black.ttf); }
-.header-black { font-family: 'headerBlack'; }
+@font-face
+  font-family: headerBlack
+  src: url(./fonts/Montserrat/Montserrat-Black.ttf)
 
-@font-face { font-family: headerBold; src: url(./fonts/Montserrat/Montserrat-Bold.ttf); }
-.header-bold { font-family: 'headerBold'; }
+.header-black
+  font-family: 'headerBlack'
 
-@font-face { font-family: header; src: url(./fonts/Montserrat/Montserrat-Regular.ttf); }
-.header { font-family: 'header'; }
+@font-face
+  font-family: headerBold
+  src: url(./fonts/Montserrat/Montserrat-Bold.ttf)
+.header-bold
+  font-family: 'headerBold'
+
+@font-face
+  font-family: header
+  src: url(./fonts/Montserrat/Montserrat-Regular.ttf)
+.header
+  font-family: 'header'
 
 // Body
-@font-face { font-family: bodyBold; src: url(./fonts/Montserrat/Montserrat-Bold.ttf); }
-.body-bold { font-family: 'bodyBold'; }
+@font-face
+  font-family: bodyBold
+  src: url(./fonts/Montserrat/Montserrat-Bold.ttf)
+.body-bold
+  font-family: 'bodyBold'
 
-@font-face { font-family: bodyItalic; src: url(./fonts/Montserrat/Montserrat-Italic.ttf); }
-.body-italic { font-family: 'bodyItalic'; }
+@font-face
+  font-family: bodyItalic
+  src: url(./fonts/Montserrat/Montserrat-Italic.ttf)
+.body-italic
+  font-family: 'bodyItalic'
 
-@font-face { font-family: body; src: url(./fonts/Montserrat/Montserrat-Regular.ttf); }
-.body, div, p { font-family: 'body'; }
+@font-face
+  font-family: body
+  src: url(./fonts/Montserrat/Montserrat-Regular.ttf)
+.body, div, p
+  font-family: 'body'
 
 // Color classes
-.primary { color: $primary }
-.primaryreg { color: $primaryreg }
-.primarylight { color: $primarylight }
-.secondary { color: $secondary }
-.accent { color: $accent }
+.primary
+  color: $primary
+.primaryreg
+  color: $primaryreg
+.primarylight
+  color: $primarylight
+.secondary
+  color: $secondary
+.accent
+  color: $accent
 
-.dark { color: $dark }
-.light { color: $light }
-.darkgrey { color: $darkgrey  }
-.lightgrey { color: $lightgrey }
+.dark
+  color: $dark
+.light
+  color: $light
+.darkgrey
+  color: $darkgrey
+.lightgrey
+  color: $lightgrey
 
-.positive { color: $positive }
-.negative { color: $negative }
-.info { color: $info }
-.warning { color: $warning }
+.positive
+  color: $positive
+.negative
+  color: $negative
+.info
+  color: $info
+.warning
+  color: $warning
 
-h1, h2, h3, h4, h5, h6 { margin-bottom: 0 }
-h4 { margin-top: 0 }
+h1, h2, h3, h4, h5, h6
+  margin-bottom: 0
+h4
+  margin-top: 0
 p, div
   hyphens: none
   text-align: justify
@@ -61,7 +95,7 @@ p, div
 // Generic
 .page-title
   @extend .header-black
-  margin-top: 1rem
+  margin-top: 2rem
   margin-bottom: 2rem
   text-align: center
 
@@ -71,8 +105,8 @@ p, div
 
 // Dark mode config
 .body--light,
-  .dark-toggle
-    color: $dark
+.dark-toggle
+  color: $dark
 
   .hyperlink
     color: $primarydark
