Improve mobile appearance

--- a/app/src/css/app.sass
+++ b/app/src/css/app.sass
@@ -73,13 +73,13 @@ h1, h2, h3, h4, h5, h6
 h4, h5
   margin-top: 0
 p, div
-  hyphens: none
+  hyphens: manual
   text-align: justify
 
 // Card styling
 .action-card
   cursor: pointer
-  margin: 1rem
+  margin-top: 2rem
   max-width: 200px
   min-width: 100px
   padding: 1rem
