--- a/app/src/css/quasar.variables.sass
+++ b/app/src/css/quasar.variables.sass
@@ -22,6 +22,7 @@ $accent    : #9C27B0
 
 $dark      : #1D1D1D
 $light     : #E2E2E2
+$darkestgrey: #4A4A4A
 $darkgrey  : #767171
 $lightgrey : #D0CECE
 
