Setup receive page

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -82,7 +82,7 @@ p, div
 // Card styling
 .action-card
   cursor: pointer
-  margin-top: 2rem
+  margin: 0 auto
   max-width: 200px
   min-width: 100px
   padding: 1rem
@@ -104,6 +104,9 @@ p, div
 
 .form
   max-width: 500px
+  margin: 0 auto
+
+.horizontal-center
   margin: 0 auto
 
 // Dark mode config
