Update contract addresses, some UX improvements

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -98,6 +98,9 @@ p, div
   .dark-toggle
     color: $dark
 
+  .bg-muted
+    background: $lightestgrey
+
   .hyperlink
     color: $primarydark
     text-decoration: underline
@@ -107,6 +110,9 @@ p, div
 .body--dark
   .dark-toggle
     color: $light
+
+  .bg-muted
+    background: $darkestgrey
 
   .hyperlink
     color: $primaryreg
