--- a/frontend/src/css/quasar.variables.sass
+++ b/frontend/src/css/quasar.variables.sass
@@ -22,9 +22,10 @@ $accent    : #9C27B0
 
 $dark      : #1D1D1D
 $light     : #E2E2E2
-$darkestgrey: #4A4A4A
 $darkgrey  : #767171
+$darkestgrey: darken(darkgrey, 50%)
 $lightgrey : #D0CECE
+$lightestgrey : lighten(lightgrey, 15%)
 
 $positive  : #21BA45
 $negative  : #C10015
