Some styling cleanup

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -120,6 +120,9 @@ p, div
     cursor: pointer
     display: inline-block
 
+  .separator
+    border-bottom: 1px solid rgba(0, 0, 0, 0.2)
+
   .code-grey
     color: grey
   .code-blue
@@ -142,6 +145,9 @@ p, div
     text-decoration: underline
     cursor: pointer
     display: inline-block
+
+  .separator
+    border-bottom: 1px solid rgba(255, 255, 255, 0.2)
 
   .code-grey
     color: grey
