Add withdrawal confirmation modal

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -182,3 +182,7 @@ p, div
 
 .border-top-thick
   border-top: 5px solid $primary
+
+.border-warning
+  border: 1px solid $warning
+  border-radius: 10px
