Add close button to the receive table warning modal

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -114,6 +114,9 @@ p, div
   .bg-muted
     background: $lightestgrey
 
+  .text-muted
+    color: $lightgrey
+
   .hyperlink
     color: $primarydark
     text-decoration: underline
@@ -139,6 +142,9 @@ p, div
 
   .bg-muted
     background: $darkestgrey
+
+  .text-muted
+    color: $darkgrey
 
   .hyperlink
     color: $primaryreg
