--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -106,6 +106,11 @@ p, div
   max-width: 600px
   margin: 0 auto
 
+.form-max-wide
+  // Maximum width for a form-like div, used on account setup page
+  max-width: 800px
+  margin: 0 auto
+
 .horizontal-center
   margin: 0 auto
 
