style: improvements to notify.js config
- dark mode set dynamically
- increase min-width to avoid truncation of addresses

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -202,3 +202,7 @@ p, div
 
 .text-break-word
   word-wrap: break-word
+
+// Blocknative notify.js config
+.bn-notify-notifications
+  min-width: 500px
