Chinese FAQ link added

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -92,6 +92,11 @@ p, div
   @media (max-width: $breakpoint-sm-max)
     font-size: 3rem
 
+.chinese-faq
+  margin-top: -3rem
+  margin-bottom: 3rem
+  text-align: center
+
 .form
   max-width: 475px
   margin: 0 auto
