Fix Language selector

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -92,11 +92,9 @@ p, div
   @media (max-width: $breakpoint-sm-max)
     font-size: 3rem
 
-.chinese-faq
-  margin-top: -3rem
-  margin-bottom: 3rem
+.language-selector
+  max-width: 50%
   text-align: center
-  padding-right: 2.3rem
 
 .form
   max-width: 475px
