Added account center

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -1,4 +1,6 @@
-// app global css in Sass form
+:root
+  --account-center-network-selector-color: $primary
+  --account-center-maximized-network-selector-color: $primary
 
 // Headers
 @font-face
