Remove metamask propmpt when locked

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -1,6 +1,7 @@
 :root
-  --account-center-network-selector-color: $primary
-  --account-center-maximized-network-selector-color: $primary
+  @media screen and (max-width: $breakpoint-xs-max)
+    --account-center-position-right: 1
+  
 
 // Headers
 @font-face
