feat: add hardcoded donation banner

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -124,6 +124,16 @@ p, div
 
 // Dark mode config
 .body--light
+  .alert-banner
+    background: $darkestgrey
+    color: $light
+
+  .alert-banner-hyperlink
+    color: $primaryreg
+    text-decoration: underline
+    cursor: pointer
+    display: inline-block
+
   .dark-toggle
     color: $dark
 
@@ -152,6 +162,16 @@ p, div
     color: #dd4a68
 
 .body--dark
+  .alert-banner
+    background: $lightestgrey
+    color: $dark
+
+  .alert-banner-hyperlink
+    color: $primarydark
+    text-decoration: underline
+    cursor: pointer
+    display: inline-block
+
   .dark-toggle
     color: $light
 
