Add BatchSend page with working amount validation and token commit. Address other nits
Remove unused vars

Add table style

Add remove button

Import type and remove unused vars

Add working toll summary

Rename files

Fix summary styling

Cleanup

Fix build warnings

Default to chain native token

Don't allow user to delete first row

Add card layout on mobile

Combine Send and BatchSend page init

Combine Send and BatchSend page done

Feature flag batchSend everywhere except goerli

Remove standalone batchSend page

Add i18n translations

Dedupe isValidTokenAmount

Remove unused vars

Update i18n values

Add delete icon

Match mobile batch send style with Send page and add spacing between cards

Remove tab options when batch send isn't supported

Use smaller numbers in desktop view

Move tabs under title and make them closer

Make desktop view input styles uniform

Fix toll summary and removeField

Fix falky feature flag batchSendIsSupported

Remove gold outline for real

Make batchSend numbering smaller and grey

Fix dark mode container color

Fix copy icon margins and add iconMargin prop

Add isValidAmount check

Update batchSend address

Update Umbra.test.ts

Disblae switching tabs, adding and removing fields while tx is pending

Reset batchSend form after send
- Disable send when one row
- Dont reset default token

Update resetForm to fix disabled Single Send button after batchSend tx

Cleanup

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -96,9 +96,65 @@ p, div
   @media (max-width: $breakpoint-sm-max)
     font-size: 3rem
 
+.send-page-title
+  @extend .page-title
+  margin-bottom: 2rem
+
 .language-selector
   max-width: 50%
   text-align: center
+
+.batch-send
+  display: flex
+  max-width: 100%
+  margin: 0 auto
+  align-items: center
+  justify-content: center
+
+.batch-send-label
+  width: 20px
+  margin: 0px 10px 18px 10px
+  text-align: center
+
+.batch-send-delete
+  display: flex
+  align-items: center
+  justify-content: center
+
+.batch-send-tabs
+  margin: 20px auto
+  max-width: 42%
+
+.input-container
+  margin: 0px 10px
+
+
+.input-container-token
+  min-width: 140px
+  margin: 0px 10px
+
+.input-container-address
+  margin: 0px 10px
+  width: 30%
+
+.input-container-address-grid
+  margin: 0px 10px
+  width: 100%
+
+.input-container-amount
+  margin: 0px 10px
+  max-width: 150px
+
+.batch-send-buttons
+  display: flex
+  flex-direction: column
+  align-items: center
+
+.batch-send-card
+  margin: 10px 0px
+
+.button-container
+  margin: 10px
 
 .form
   max-width: 475px
