Use Sass instead of style

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -196,8 +196,14 @@ p, div
   .bg-muted
     background: $lightestgrey
 
+  .bg-notice
+    background: #FCEFC7
+
   .text-muted
     color: $lightgrey
+
+  .text-notice
+    color:#513C06
 
   .hyperlink
     color: $primarydark
@@ -234,8 +240,14 @@ p, div
   .bg-muted
     background: $darkestgrey
 
-  .text-muted
+  .bg-notice
+    background: #7C5E10
+
+    .text-muted
     color: $darkgrey
+
+  .text-notice
+    color:#FFFAEB
 
   .hyperlink
     color: $primaryreg
@@ -283,6 +295,9 @@ p, div
 .border-warning
   border: 1px solid $warning
   border-radius: 10px
+
+.border-radius
+  border-radius: 15px
 
 .text-break-word
   word-wrap: break-word
