--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -293,7 +293,7 @@ p, div
   border: 1px solid $warning
   border-radius: 10px
 
-.border-radius
+.rounded-borders-md
   border-radius: 15px
 
 .text-break-word
