On receive page, ask user to setup account if unregistered (#571)
* On receive page, ask user to setup account if unregistered

* Use Sass instead of style

* Format .sass file

* Rename style

* If no pk is provided in advanced mode, return an empty array as announcements

* Return empty announcement array when in advanced mode && account isn't set up && no pk is provided

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -76,8 +76,6 @@
 .danger
   color: $danger
 
-
-
 h1, h2, h3, h4, h5, h6
   margin-bottom: 0
 h4, h5
@@ -127,7 +125,6 @@ p, div
 
 .input-container
   margin: 0px 10px
-
 
 .input-container-token
   min-width: 140px
@@ -196,8 +193,14 @@ p, div
   .bg-muted
     background: $lightestgrey
 
+  .bg-notice
+    background: #FCEFC7
+
   .text-muted
     color: $lightgrey
+
+  .text-notice
+    color: #513C06
 
   .hyperlink
     color: $primarydark
@@ -234,8 +237,14 @@ p, div
   .bg-muted
     background: $darkestgrey
 
+  .bg-notice
+    background: #7C5E10
+
   .text-muted
     color: $darkgrey
+
+  .text-notice
+    color: #FFFAEB
 
   .hyperlink
     color: $primaryreg
@@ -284,6 +293,8 @@ p, div
   border: 1px solid $warning
   border-radius: 10px
 
+.rounded-borders-md
+  border-radius: 15px
+
 .text-break-word
   word-wrap: break-word
-
