Cleaned up warning vs error layout

--- a/frontend/src/css/app.sass
+++ b/frontend/src/css/app.sass
@@ -109,6 +109,12 @@ p, div
   align-items: center
   justify-content: center
 
+.batch-send-warning-container
+  color: $warning
+  line-height: normal
+  margin: 0px 10px
+  width: 30%
+
 .batch-send-label
   width: 20px
   margin: 0px 10px 18px 10px
